Fix misalignment issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -573,7 +573,7 @@ label {
     }
 
     #manage-bookings-side {
-        left: 10px;
+        left: 0.1px;
     }
 
     #cancel-lesson-msg {
